--- a/package.json
+++ b/package.json
@@ -8,5 +8,15 @@
     "config"
   ],
   "author": "Sami Salih İBRAHİMBAŞ",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@istanbul/app": "^0.0.24"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.3",
+    "typescript": "^4.7.4"
+  },
+  "optionalDependencies": {
+    "yaml": "^2.1.1"
+  }
 }
